# tensor

./: .gitattributes  .gitignore  requirements.txt
notebooks/: Graph Manipulation.ipynb  Image Recognition OpenCV.ipynb  Initial Steps.ipynb  Initialization.ipynb  Tennis & Palle.ipynb  init_utils.py  modules.yml  video_fom.py
notebooks/data/: bvlc_googlenet.prototxt
notebooks/tests/: video_fom_tests.py
opencv/: CMakeLists.txt  DisplayImage.cpp
